<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>tweetextractor</groupId>
		<artifactId>tweetextractor</artifactId>
		<version>1.0.1.0</version>
	</parent>
	<groupId>tweetextractor-fx</groupId>
	<artifactId>tweetextractor-fx</artifactId>
	<name>TweetExtractorFX</name>
	<url>http://maven.apache.org</url>
	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.fxml</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>*.properties</include>
					<include>*.xml</include>
				</includes>
			</resource>
			<resource>
				<directory>resources/fonts</directory>
				<filtering>true</filtering>
				<includes>
					<include>*.ttf</include>
				</includes>
			</resource>
			<resource>
				<directory>resources/models</directory>
				<filtering>true</filtering>
				<includes>
					<include>*.gz</include>
					<include>*.ser</include>
					<include>*.prop</include>
				</includes>
			</resource>
			<resource>
				<directory>resources/icon</directory>
				<filtering>true</filtering>
				<includes>
					<include>*.png</include>
				</includes>
			</resource>
			<resource>
				<directory>resources/chartTypes</directory>
				<filtering>true</filtering>
				<includes>
					<include>*.png</include>
					<include>*.jpg</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*</exclude>
										<exclude>LICENSE.txt</exclude>
										<exclude>NOTICE.txt</exclude>
										<exclude>CHANGES</exclude>
										<exclude>README</exclude>
										<exclude>builddef.lst</exclude>
										<!-- clutter not needed in jar -->
										<exclude>resources/grib1/nasa/README*.pdf</exclude>
										<exclude>resources/grib1/**/readme*.txt</exclude>
										<exclude>resources/grib2/**/readme*.txt</exclude>
										<!-- TIKA-763: Workaround to avoid including LGPL classes -->
										<exclude>ucar/nc2/iosp/fysat/Fysat*.class</exclude>
										<exclude>ucar/nc2/dataset/transform/VOceanSG1*class</exclude>
										<exclude>ucar/unidata/geoloc/vertical/OceanSG*.class</exclude>
									</excludes>
								</filter>
							</filters>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>es.uam.eps.tweetextractorfx.Main</mainClass>
								</transformer>

								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
									<resource>META-INF/LICENSE</resource>
									<file>target/classes/META-INF/LICENSE</file>
								</transformer>

								<transformer
									implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
									<resource>META-INF/NOTICE</resource>
									<file>target/classes/META-INF/NOTICE</file>

								</transformer>


								<transformer
									implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
									<resource>META-INF/DEPENDENCIES</resource>
									<file>target/classes/META-INF/DEPENDENCIES</file>

								</transformer>

								<transformer
									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
									<resource>META-INF/cxf/bus-extensions.txt</resource>

								</transformer>
							</transformers>

						</configuration>
					</execution>

				</executions>

			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>ttf</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>es.uam.eps.tweetextractorfx.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.xml.rpc/javax.xml.rpc-api -->
		<dependency>
			<groupId>javax.xml.rpc</groupId>
			<artifactId>javax.xml.rpc-api</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>tweetextractor-commons</groupId>
			<artifactId>tweetextractor-commons</artifactId>
			<version>1.0.1.0</version>
		</dependency>
		<dependency>
			<groupId>tweetextractor-analytics</groupId>
			<artifactId>tweetextractor-analytics</artifactId>
			<version>1.0.1.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-rt-bindings-soap -->
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-bindings-soap</artifactId>
			<version>3.2.7</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/wsdl4j/wsdl4j -->
		<dependency>
			<groupId>wsdl4j</groupId>
			<artifactId>wsdl4j</artifactId>
			<version>1.6.3</version>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core -->
		<dependency>
			<groupId>org.twitter4j</groupId>
			<artifactId>twitter4j-core</artifactId>
			<version>4.0.7</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>activation</artifactId>
			<version>1.0.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>2.3.0.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
		<dependency>
			<groupId>org.mindrot</groupId>
			<artifactId>jbcrypt</artifactId>
			<version>0.4</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>11</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics </artifactId>
			<version>11</version>
			<classifier>win</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics </artifactId>
			<version>11</version>
			<classifier>linux</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics </artifactId>
			<version>11</version>
			<classifier>mac</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>11</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>11</version>
			<classifier>win</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>11</version>
			<classifier>linux</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>11</version>
			<classifier>mac</classifier>
		</dependency>
		<!-- https://mvnrepository.com/artifact/no.tornado/tornadofx-controls -->
		<dependency>
			<groupId>no.tornado</groupId>
			<artifactId>tornadofx-controls</artifactId>
			<version>1.0.6</version>
		</dependency>
	</dependencies>
</project>
